Apply button no longer stuck to expanding info div, requested by Sam

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -184,7 +184,6 @@ p.apply-info {
 	max-width: 245px;
 	width: 100%;
 	margin: 0 auto;
-	height: 80px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border: 1px solid #ef3e36;
@@ -195,6 +194,8 @@ p.apply-info {
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 10px;
+	margin-bottom: 25px;
+	padding-bottom: 10px;
 	display: none;
 }
 
